GNOME Bugzilla – Bug 722594
[PATCH] Fail to build gdm on FreeBSD
Last modified: 2014-02-13 12:14:44 UTC
Created attachment 266710 [details] [review] Fix build problem on FreeBSD I cannot build gdm on FreeBSD because of several problems. 1. -lutil is missing when linking gdm-session-worker. (daemon/Makefile.am) 2. #include <sys/types.h> is missing in daemon/gdm-session.h. 3. #include <netinet/in.h> is missing in daemon/gdm-xdmcp-display-factory.c.
While looking at this patch I notice that this EXTRA_DAEMON_LIBS thing is a bit strange. See this comment: # Note that these libs are in LDFLAGS because they should come before # everything else on the link line as they may override stuff gdm_LDFLAGS = \ $(EXTRA_DAEMON_LIBS) \ $(NULL) This was introduced as a hack in order to fix bug 85785, but these days usage within even this one Makefile is inconsistent. I think it's probably worth removing this at this point, and possibly removing the distinction between EXTRA_DAEMON_LIBS and DAEMON_LIBS entirely.
Attachment 266710 [details] pushed as 2d02525 - Fix build problem on FreeBSD (In reply to comment #1) > I notice that this EXTRA_DAEMON_LIBS thing is a bit strange. -> bug 724283.